objects/HealthCloudGA__AssessmentSchedulingSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__CareProgramId__c</fullName>
        <label>CareProgramId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EmailTemplate__c</fullName>
        <label>EmailTemplate</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InvitationExpirationDays__c</fullName>
        <label>InvitationExpirationDays</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PatientCondition__c</fullName>
        <label>PatientCondition</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PatientSurveyDurationDays__c</fullName>
        <label>PatientSurveyDurationDays</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SurveyName__c</fullName>
        <label>SurveyName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaskAssignmentUser__c</fullName>
        <label>TaskAssignmentUser</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AssessmentSchedulingSettings</label>
    <pluralLabel>AssessmentSchedulingSettings</pluralLabel>
</CustomObject>